Save dynamic playlist weight values correctly with both "," and "." as decimal separator.

Big thanks for the patch go to Georg Hennig <georg298@gmx.de>.

BUG: 184304

svn path=/trunk/extragear/multimedia/amarok/; revision=925963